# batio

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: button_example.py  print_events.py
src/batio/: __init__.py  events.py  linux_terminal.py  vt100_terminal.py  windows_terminal.py
